<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paintball &amp; Airsoft Companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="GameModes">Game Modes</string>
    <string name="mainmenu">Main Menu</string>
    <string name="bomb">bomb</string>
    <string name="battleplan">Battle Plan</string>
    <string name="about">about</string>
    <string name="title_activity_battle_plan">Battle Plan</string>
    <string name="title_activity_bomb">Bomb</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_game_modes">GameModes</string>
    <string name="title_activity_team_death_match">Team Death Match</string>
    <string name="title_activity_fire_team">fire team</string>
    <string name="title_activity_squad_deathmatch">squad deathmatch</string>
    <string name="title_activity_search_destroy">search and destroy</string>
    <string name="title_activity_engineer">engineer</string>
    <string name="title_activity_president">presiden</string>
    <string name="title_activity_supply_crate">supply crate</string>
    <string name="title_activity_air_support">air support</string>
    <string name="title_activity_capture_flag">capture the flag</string>
    <string name="title_activity_pilot">pilot</string>
    <string name="title_activity_infected">infected</string>
    <string name="title_activity_dday">DDay</string>
    <string name="title_activity_tactical__gps">Tactical GPS</string>
    <string name="button">button</string>
    <string name="color_picker">Color Picker</string>
    <string name="title_activity_battleplan_map">Map</string>

</resources>
